--- a/Dasmoto's Arts & Crafts/style.css
+++ b/Dasmoto's Arts & Crafts/style.css
@@ -18,3 +18,15 @@ header{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+#frames h2{
+    font-family: Helvetica;
+    font-size: 32px;
+    font-weight: bold;
+    color: white;
+    background-color: lightcoral;
+}
+#frames u{
+    color: blue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
