--- a/Dasmoto's Arts & Crafts/style.css
+++ b/Dasmoto's Arts & Crafts/style.css
@@ -30,3 +30,15 @@ header{
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+#paint h2{
+    font-family: Helvetica;
+    font-size: 32px;
+    font-weight: bold;
+    color: white;
+    background-color: skyblue;
+}
+#paint u{
+    color: blue;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
