--- a/Dasmoto's Arts & Crafts/style.css
+++ b/Dasmoto's Arts & Crafts/style.css
@@ -13,11 +13,7 @@ header{
     color: white;
     background-color: mediumspringgreen;
 }
-#brushes u{
-    color: blue;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-}
+
 #frames h2{
     font-family: Helvetica;
     font-size: 32px;
@@ -25,11 +21,8 @@ header{
     color: white;
     background-color: lightcoral;
 }
-#frames u{
-    color: blue;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold;
-}
+
+
 #paint h2{
     font-family: Helvetica;
     font-size: 32px;
@@ -37,7 +30,7 @@ header{
     color: white;
     background-color: skyblue;
 }
-#paint u{
+span{
     color: blue;
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
